# modern_cpp

./: README.md
imdb/include/: akas.hpp  basics.hpp  heap.hpp  ratings.hpp  table.hpp
imdb/src/: akas.cpp  basics.cpp  main.cpp  ratings.cpp
tail/: CMakeLists.txt
tail/include/: buffer.hpp  cat.hpp  echo.hpp  operation_interface.hpp  pipeline.hpp  tail.hpp  translate.hpp
tail/src/: cat.cpp  echo.cpp  main.cpp  operation_interface.cpp  pipeline.cpp  tail.cpp  translate.cpp
